# webnwb-benchmark

./: .pre-commit-config.yaml  README.md  environment.yml  index.html  index.ts  main.py  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: Build-and-deploy.yml
benchmarks/: benchmark.ts  index.ts  time_remote_slicing.ts  types.ts  utils.ts
benchmarks/hdf5/: index.ts  time_remote_slicing.ts
benchmarks/lindi/: time_remote_slicing.ts
src/webnwb_benchmark/: benchmark.html  benchmark.py  benchmarks.js
src/webnwb_benchmark/benchmarks/: time_remote_slicing.js
src/webnwb_benchmarks/: __init__.py  benchmark.py
